UPDATE obtener las constantes más cercanas a la fecha de llegada

--- a/2026/1.preprocesado_2026.ipynb
+++ b/2026/1.preprocesado_2026.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1902/1391586130.py:5: DtypeWarning: Columns (57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_1892/1391586130.py:5: DtypeWarning: Columns (57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_prescripcion_farmacos = pd.read_csv('data/data_2018_01_01-2026_01_13/PrescripcionFarmacos_combinado.csv')\n",
-      "/tmp/ipykernel_1902/1391586130.py:7: DtypeWarning: Columns (14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_1892/1391586130.py:7: DtypeWarning: Columns (14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_constantes = pd.read_csv('data/data_2018_01_01-2026_01_13/ConstantesVitales_combinado.csv')\n"
      ]
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,18 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1902/588385289.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_1892/3855050951.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['itipsexo'] = df['itipsexo'].replace({'H': 0, 'M': 1})\n",
-      "/tmp/ipykernel_1902/588385289.py:100: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_1892/3855050951.py:100: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['ireingre'] = df['ireingre'].replace({'N': 0, 'S': 1})\n",
-      "/tmp/ipykernel_1902/588385289.py:116: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_1892/3855050951.py:116: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['iotrocen'] = df['iotrocen'].replace({'N': 0, 'S': 1})\n"
      ]
     }
@@ -229,10 +229,10 @@
     "df = df[~df['gidenpac'].isin(valores_a_eliminar)]\n",
     "\n",
     "# Eliminar columnas que ya no necesitamos\n",
-    "df = df.drop(columns=['faltplan'])\n",
-    "df = df.drop(columns=['fnacipac'])\n",
-    "df = df.drop(columns=['fllegada'])\n",
-    "df = df.drop(columns=['finterve'])"
+    "#df = df.drop(columns=['faltplan'])\n",
+    "#df = df.drop(columns=['fnacipac'])\n",
+    "#df = df.drop(columns=['fllegada'])\n",
+    "#df = df.drop(columns=['finterve'])"
    ]
   },
   {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "\"\\n# Filtrar df_accidentes para seleccionar solo las columnas relevantes\\ndf_accidentes = df_accidentes[['gidenpac', 'ifamilia', 'gmovilid']]\\n\\n# Realizar el merge con df, añadiendo las columnas de 'ifamilia' donde coincida 'gidenpac'\\ndf = pd.merge(df, df_accidentes, on='gidenpac', how='left')\\n\\n# Reemplazar 'N' por 0 y 'S' por 1 en la columna 'ifamilia'\\ndf['ifamilia'] = df['ifamilia'].replace({'N': 0, 'S': 1})\\n\\n# Cambiar el nombre de la columna 'ifamilia' a 'vive_solo'\\ndf = df.rename(columns={'ifamilia': 'vive_solo'})\\n\\n# Renombrar 'gmovilid' como 'movilidad_accidentes'\\ndf = df.rename(columns={'gmovilid': 'movilidad_accidentes'})\\n\\n# Eliminar filas duplicadas basándose en la columna 'gidenpac'\\ndf = df.drop_duplicates(subset='gidenpac')\\n# Pasar a entero y añadimos -999 en los vacios\\n#df['vive_solo'] = df['vive_solo'].fillna(-999).astype(int)\\n#df['movilidad_accidentes'] = df['movilidad_accidentes'].fillna(-999).astype(int)\\n\""
       ]
      },
-     "execution_count": 139,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,26 +293,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1892/910770467.py:28: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  vitals_cercanas = df.groupby('gidenpac').apply(lambda g: get_closest_vitals(g, df_constantes))\n"
+     ]
+    }
+   ],
    "source": [
-    "# Seleccionar solo las columnas necesarias de df_constantes y eliminar duplicados tomando el primer valor no nulo\n",
-    "df_constantes = df_constantes[['gidenpac', 'ntensmin', 'ntensmax', 'ntempera', 'nsatuoxi']].dropna(how='all')\n",
-    "df_constantes = df_constantes.groupby('gidenpac').first().reset_index()\n",
+    "# Convertir fechas una sola vez\n",
+    "df['fllegada'] = pd.to_datetime(df['fllegada'], errors='coerce')\n",
+    "df_constantes['fapuntes'] = pd.to_datetime(df_constantes['fapuntes'], errors='coerce')\n",
     "\n",
-    "# Realizar el merge con df, añadiendo las constantes vitales\n",
-    "df = pd.merge(df, df_constantes, on='gidenpac', how='left')\n",
+    "# Función optimizada\n",
+    "def get_closest_vitals(group, df_const):\n",
+    "    \"\"\"Para cada paciente, encuentra el registro más cercano\"\"\"\n",
+    "    gidenpac = group.name\n",
+    "    fllegada = group['fllegada'].iloc[0]\n",
+    "    \n",
+    "    # Filtrar solo registros de este paciente\n",
+    "    registros = df_const[df_const['gidenpac'] == gidenpac].copy()\n",
+    "    if registros.empty:\n",
+    "        return pd.Series({'ntensmin': -999, 'ntensmax': -999, 'ntempera': -999.0, 'nsatuoxi': -999})\n",
+    "    \n",
+    "    # Calcular distancia\n",
+    "    registros['diff'] = (registros['fapuntes'] - fllegada).abs()\n",
+    "    mas_cercano = registros.loc[registros['diff'].idxmin()]\n",
+    "    \n",
+    "    return pd.Series({\n",
+    "        'ntensmin': mas_cercano['ntensmin'],\n",
+    "        'ntensmax': mas_cercano['ntensmax'],\n",
+    "        'ntempera': mas_cercano['ntempera'],\n",
+    "        'nsatuoxi': mas_cercano['nsatuoxi']\n",
+    "    })\n",
     "\n",
+    "# Aplicar por paciente (mucho más rápido)\n",
+    "vitals_cercanas = df.groupby('gidenpac').apply(lambda g: get_closest_vitals(g, df_constantes))\n",
+    "df = df.join(vitals_cercanas, on='gidenpac')\n",
+    "\n",
+    "# Conversiones\n",
     "df['ntensmin'] = pd.to_numeric(df['ntensmin'], errors='coerce').fillna(-999).astype(int)\n",
     "df['ntensmax'] = pd.to_numeric(df['ntensmax'], errors='coerce').fillna(-999).astype(int)\n",
     "df['ntempera'] = pd.to_numeric(df['ntempera'], errors='coerce').fillna(-999).astype(float)\n",
     "df['nsatuoxi'] = pd.to_numeric(df['nsatuoxi'], errors='coerce').fillna(-999).astype(int)\n",
     "\n",
+    "# Filtros\n",
     "df = df[(df['ntensmin'] >= 30) & (df['ntensmin'] <= 105)]\n",
     "df = df[(df['ntensmax'] >= 40) & (df['ntensmax'] <= 200)]\n",
-    "#df = df[(df['ntempera'] >= 34.8) & (df['ntempera'] <= 38.8)]\n",
-    "df = df[df['nsatuoxi'] >= 80]\n"
+    "df = df[df['nsatuoxi'] >= 80]"
    ]
   },
   {
@@ -324,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1902/2776989086.py:17: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_1892/2776989086.py:17: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_ant.replace({'N': 0, 'S': 1, 'A': 1}, inplace=True)\n"
      ]
     }
@@ -381,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +693,7 @@
        "\"\\ndf['ds_vitamina_d'] = df['ds_vitamina_d'].fillna(-999).astype(int)\\ndf['ds_obesidad'] = df['ds_obesidad'].fillna(-999).astype(int)\\ndf['ds_osteoporosis'] = df['ds_osteoporosis'].fillna(-999).astype(int)\\ndf['ds_insuficiencia_respiratoria'] = df['ds_insuficiencia_respiratoria'].fillna(-999).astype(int)\\ndf['ds_diabetes_y'] = df['ds_diabetes_y'].fillna(-999).astype(int)\\ndf['ds_infeccion_respiratoria'] = df['ds_infeccion_respiratoria'].fillna(-999).astype(int)\\ndf['ds_insuficiencia_cardiaca'] = df['ds_insuficiencia_cardiaca'].fillna(-999).astype(int)\\ndf['ds_deterioro_cognitivo'] = df['ds_deterioro_cognitivo'].fillna(-999).astype(int)\\ndf['ds_insuficiencia_renal'] = df['ds_insuficiencia_renal'].fillna(-999).astype(int)\\ndf['ds_HTA_y'] = df['ds_HTA_y'].fillna(-999).astype(int)\\ndf['ds_ITU'] = df['ds_ITU'].fillna(-999).astype(int)\\ndf['ds_acido_folico'] = df['ds_acido_folico'].fillna(-999).astype(int)\\ndf['ds_anemia'] = df['ds_anemia'].fillna(-999).astype(int)\\n\""
       ]
      },
-     "execution_count": 146,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +790,7 @@
        "\"\\n# Si las valoraciones médicas no tienen info sobre el paciente, lo eliminamos\\ncolumnas_a_verificar = [\\n    'ds_ITU', 'ds_acido_folico', 'ds_anemia', 'ds_vitamina_d', \\n    'ds_obesidad', 'ds_osteoporosis', 'ds_insuficiencia_respiratoria', \\n    'ds_infeccion_respiratoria', 'ds_insuficiencia_cardiaca', \\n    'ds_deterioro_cognitivo', 'ds_insuficiencia_renal'\\n]\\n\\ndf = df[~df[columnas_a_verificar].isin([-999]).any(axis=1)]\\n\""
       ]
      },
-     "execution_count": 148,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,12 +885,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definimos la lista de columnas a eliminar\n",
-    "cols_to_drop = ['gidenpac','ds_exitus', 'gcodipos', 'itipingr', 'ireingre', 'gmotalta', 'ds_vivo_alta','lugar_residencia','lugar_procedencia','destino_alta','ds_obesidad','ds_acido_folico'\n",
+    "# Definimos la lista de columnas a eliminar o no necesitamos\n",
+    "cols_to_drop = ['gidenpac','ds_exitus', 'gcodipos', 'itipingr', 'ireingre', 'gmotalta', 'ds_vivo_alta','lugar_residencia','lugar_procedencia','destino_alta','ds_obesidad','ds_acido_folico',\n",
+    "                'faltplan','fnacipac','fllegada','finterve'\n",
     "]\n",
     "\n",
     "df.drop(columns=cols_to_drop, inplace=True, errors='ignore')\n",
@@ -884,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +927,7 @@
        "'\\n1: Curación total\\n2: Mejoria\\n3: Sin cambios\\n4: Agravamiento\\n6: Con secuelas\\n7: Exitus\\n9: Mejoria a residencia\\n'"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +988,7 @@
        "\"\\n# 1. Escalar X (Predictoras)\\ncols_numericas = ['ds_edad','ds_estancia', 'ds_pre_oper','ds_post_oper', 'ntensmin', 'ntensmax', 'ntempera', 'nsatuoxi', 'Barthel', 'braden']\\n\\nscaler = StandardScaler()\\n# Sobrescribimos en X los valores transformados\\ndf[cols_numericas] = scaler.fit_transform(df[cols_numericas])\\n\\n# 4. Guardar el Scaler (necesario para desescalar resultados futuros)\\njoblib.dump(scaler, 'scaler_completo.pkl') #(Para preprocesar nuevos pacientes cuando el modelo de resultados, ya que si se los damos escalados, el los devuelve escalados y debemos desescalar para ver los días)\\n\""
       ]
      },
-     "execution_count": 155,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +1019,7 @@
        "\"\\n# Cargar el scaler\\nscaler = joblib.load('scaler_completo.pkl')\\n\\n# Índice de 'ds_estancia' en tu lista original (es el índice 1)\\nidx_estancia = 1 \\nmedia = scaler.mean_[idx_estancia]\\ndesviacion = scaler.scale_[idx_estancia]\\n\\n# Desescalar manual (Valor Real = (Valor Escalado * Desviación) + Media)\\nprediccion_dias_reales = (y_pred * desviacion) + media\\n\""
       ]
      },
-     "execution_count": 156,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
